[InstancesManagerTests] Improve test coverage and organization in InstanceSorterCardVisitorTest and ModelInstancesManagerTest
now both classes are 100% covered